--- a/404.html
+++ b/404.html
@@ -148,6 +148,7 @@
 			</div>
 			<p>The page you are looking for might have been removed had its name changed or is temporarily unavailable.
 				<a href="https://cs50.paulkim.me">Back to homepage</a></p>
+            <p>Don't know or unsure what 404 means? <a href="https://cs50.paulkim.me/curriculum/understanding_technology/internet/">Learn more.</a>
 		</div>
 	</div>
 
